k8s/networking/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: translator-api
  namespace: translator
spec:
  selector: { app: translator-api }
  ports:
    - port: 8000
      targetPort: 8000
