k8s/networking/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: translator-ui
  namespace: translator
spec:
  selector: { app: translator-ui }
  ports:
    - port: 80
      targetPort: 8501
